# astrobee_mapper

./: CMakeLists.txt  README.md  package.xml
include/: compareVec3.h  globals.h  octoClass.h  polynomials.h  sampledTrajectory.h  structs.h  tf_class.h
launch/: fadingMap.launch  mapNcheck.launch
msg/: ArmFeedback.msg  ArmGoal.msg  ArmResult.msg  ControlAction.msg  ControlActionFeedback.msg  ControlActionGoal.msg  ControlActionResult.msg  ControlFeedback.msg  ControlGoal.msg  ControlResult.msg  DockFeedback.msg  DockGoal.msg  DockResult.msg  ExecuteAction.msg  ExecuteActionFeedback.msg  ExecuteActionGoal.msg  ExecuteActionResult.msg  ExecuteGoal.msg  IdleAction.msg  IdleActionFeedback.msg  IdleActionGoal.msg  IdleActionResult.msg  IdleGoal.msg  MoveFeedback.msg  MoveGoal.msg  PerchAction.msg  PerchActionFeedback.msg  PerchActionGoal.msg  PerchActionResult.msg  PerchGoal.msg  PerchResult.msg  PlanFeedback.msg  PlanGoal.msg  PlanResult.msg  StopFeedback.msg  StopGoal.msg  SwitchAction.msg  SwitchActionFeedback.msg  SwitchActionGoal.msg  SwitchActionResult.msg  (+11 more)
src/: astrobee_mapNcheck.cpp  astrobee_mapper.cpp  octoClass.cpp  polynomials.cpp  sampledTrajectory.cpp  structs.cpp  tf_class.cpp
src/Callbacks/: callbacks.cpp  callbacks.h
src/HelperFcns/: QuatRotEuler.h  visualizationFunctions.cpp  visualizationFunctions.h
src/Services/: services.cpp  services.h
src/threads/: threads.cpp  threads.h
srv/: updateMapInflation.srv  voidService.srv
